syntax = "proto3";

package proxy;

import "github.com/rancher/opni/pkg/apis/core/v1/core.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/rancher/opni/pkg/apis/proxy/v1";

service RegisterProxy {
  rpc Endpoint(google.protobuf.Empty) returns (ProxyEndpoint);
  rpc AuthHeaders(core.ReferenceList) returns (HeaderResponse);
}

message ProxyEndpoint {
  string path    = 1;
  string backend = 2;
}

message Header {
  string          key    = 1;
  repeated string values = 2;
}

message HeaderResponse {
  repeated Header headers = 1;
}
